--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@
   --animation-duration: 250ms;
 }
 
+body {
+  background-image: url("../images/img-bcg-desktop@2x.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .gallery {
   display: grid;
   max-width: 1140px;
